portlets/contenteditor-portlet/src/main/webapp/css/main.css
//TODO: these are probably duplicates
.floatLeft {
      float: left;
  }

.floatRight {
    float: right;
}

.clearLeft {
    clear: left;
}

.inputTitleLeft {
    float: left;
    line-height: 30px;
    padding-right: 10px;
}

//TODO: this also exists in the theme
  .cmsDetailsBox {
      border: 1px solid #30a3fb;
      padding: 15px;
      margin-bottom: 10px;
  }

.cmsDetailsBox h1 {
    padding-bottom: 15px;
}

.cmsDetailsBox .dropzone {
    height: 20px;
    padding: 5px;
    margin-bottom: 10px;
    border-radius: 5px;
    border: 1px solid #0066b3;
    color: #0066b3;
}

.cmsDetailsBox .addpropbox input {
    float: left;
    height: 30px;

}

.cmsDetailsBox .addpropbox select {
    width: 445px;
}

.cmsDetailsBox .addpropbox select.multi {
    height: initial;
    min-height: 150px;
}

.cmsDetailsBox .addpropbox select.autoWidth {
    width: auto;
}

.cmsDetailsBox .addpropbox .wideLargeInput {
    height: 30px;
    width: 445px;
    font-size: 16px;
    padding-left: 5px;
    text-align: left;
}

.cmsDetailsBox .addpropbox.dragState {
    background-color: #CCC;
    border: 1px solid blue;
}

.cmsDetailsBox .dropzone.showAllowDropState.allowDropState {
    background-color: #CCC;
    border: 1px solid blue;
}

.cmsDetailsBox .dropzone.showAllowDropState {
    background-color: #e7f1f5;
    border: 1px dashed blue;

    /*
    -webkit-transition: all 1s ease-in-out;
    -moz-transition: all 1s ease-in-out;
    -o-transition: all 1s ease-in-out;
    transition: all 1s ease-in-out;
    -webkit-animation-name: glow;
    -webkit-animation-duration: 1s;
    -webkit-animation-iteration-count: infinite;
    -webkit-animation-direction: alternate;
    -webkit-animation-timing-function: ease-in-out;
    -moz-animation-name: glow;
    -moz-animation-duration: 1s;
    -moz-animation-iteration-count: infinite;
    -moz-animation-direction: alternate;
    -moz-animation-timing-function: ease-in-out;
    -o-animation-name: glow;
    -o-animation-duration: 1s;
    -o-animation-iteration-count: infinite;
    -o-animation-direction: alternate;
    -o-animation-timing-function: ease-in-out;
    animation-name: glow;
    animation-duration: 1s;
    animation-iteration-count: infinite;
    animation-direction: alternate;
    animation-timing-function: ease-in-out;*/
}

.cmsDetailsBox .addpropbox .addprophelp {
    width: 700px;
    color: #999;
}

.cmsDetailsBox .addpropInputContainer input {
    width: 910px;
}

.cmsDetailsBox .cke_skin_colab {
    width: 910px;
}

.cmsDetailsBox .addpropInputContainer textarea {
    width: 910px;
    height: auto;
    resize: both;
}

.cmsDetailsBox .addpropbox .upload {
    width: 700px;
}

.cmsDetailsBox .addpropbox label {
    width: 200px;
}

.cmsDetailsBox .addpropbox .contestDescription {
    height: 100px;
}

.cmsDetailsBox .c-Comment__add {
    height: 300px;
}

.cmsDetailsBox .actionItems {
    text-align: center;
}

.cmsDetailsBox .deleteIcon {
    position: relative;
    right: -7px;
    top: -7px;
    float: right;
    background-image: url("/climatecolab-theme/images/icon_question-x.png");
    width: 22px;
    height: 22px;
}

.cmsDetailsBox .contestPhases .deleteIcon {
    right: 0;
    top: 0;
}

li.ui-menu-item {
    border-bottom: 1px solid #ccc;
    background: #fff url("/climatecolab-theme/images/contest-icon-cplus-blue.png") 225px;
    background-size: 20px;
    background-repeat: no-repeat;
}

li.ui-menu-item .ui-state-focus {
    background-size: 20px;
    background: #FFF url("/climatecolab-theme/images/contest-icon-cplus-green.png") no-repeat 225px;
    border: 1px solid #ccc;
    border-radius: 0;
    color: #000;
}

.cmsDetailsBox .addSection {
    margin: 20px;
}

.cmsDetailsBox .contest-outline-left {
    float: none;
    width: auto;
    min-height: inherit;
    padding-bottom: 0;
}

.cmsDetailsBox .contestOverview {
    table-layout: fixed;
    margin: inherit;
    padding: inherit;
    margin-top: 30px;
}

.cmsDetailsBox .contestOverview .extraSmallColumn {
    width: 25px;
}

.cmsDetailsBox .contestOverview .smallColumn {
    width: 100px;
}

.cmsDetailsBox .contestOverview .mediumColumn {
    width: 200px;
}

.cmsDetailsBox .contestOverview .wideColumn {
    width: 300px;
}

.cmsDetailsBox .contestOverview tr {
    white-space: nowrap;
    line-height: 30px;
    height: 30px;
    background-color: #f2f1e9;
    display: table-row;
    margin-bottom: 0;
    border-bottom: 5px solid white;
    transition: 0.3s ease-out 0s;
    padding: inherit;
    overflow: hidden;
    text-overflow: ellipsis;
}

.cmsDetailsBox .contestOverview tr.draggable {
    cursor: move;
}

.cmsDetailsBox .contestOverview .blue tr {
    background-color: #e7f1f5;
}

.cmsDetailsBox .contestOverview tr.blue.drag {
    transform: scale(0.9);
}

.cmsDetailsBox .contestOverview tr.drag {
    transform: scale(0.9);
    border-bottom: 5px solid white;
}

.cmsDetailsBox .contestOverview tr.allowDrop {
    transition: 0.3s ease-out 0s;
    border-top: 34px solid rgba(255, 255, 255, 1);
}

.cmsDetailsBox .contestOverview td {
    border-collapse: collapse;
    vertical-align: middle;
    text-align: center;
    line-height: inherit;
}

.cmsDetailsBox .contestOverview th {
    vertical-align: middle;
    text-align: center;
    line-height: 30px;
}

.rotate {
    -webkit-transform: rotate(-45deg);
    -moz-transform: rotate(-45deg);
    -ms-transform: rotate(-45deg);
    -o-transform: rotate(-45deg);
    transform: rotate(-45deg);

    /* also accepts left, right, top, bottom coordinates; not required, but a good idea for styling */
    -webkit-transform-origin: 50% 50%;
    -moz-transform-origin: 50% 50%;
    -ms-transform-origin: 50% 50%;
    -o-transform-origin: 50% 50%;
    transform-origin: 50% 50%;

    /* Should be unset in IE9+ I think. */
    filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
}

#massMessage input {
    width: 100%;
    font-size: medium;
    line-height: 30px;
}

#massMessage textarea {
    width: 100%;
    font-size: medium;
    min-height: 60px;
}

#selectedMassAction {
    font-size: large;
    line-height: 27px;
}

#contestsFilterSelect {
    font-size: large;
    line-height: 27px;
}

.outerVerticalCenter {
    display: table-cell;
    vertical-align: middle;
    text-align: center;
}

.innerVerticalCenter {
    display: inline-block;
}

span.ontology-term-label {
    margin-left: 15px;
    font-style: italic;
}

.boxChanged:after {
    content: '*';
    color: #30a3fb;
}

.contentEditor input {border: 1px solid #DDD; color: #8d8d8d;  font-weight: 200;  margin-bottom: 7px; height: 30px;  font-size: large;  width: 530px;}
.contentBody {margin: auto; width: 1022px;  height: 742px;}
.treeContainer {        height: 561px; overflow-y: scroll;}
#infoBox {padding: 8px 35px 8px 14px;margin-bottom: 20px;}
#innerContent{height: 610px}
.colFloatLef{float:left}
#tree-view{width:350px}
#saveArticle{cursor:pointer}
#anchorArticleURL{display: block; width:0px;}

